// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`countdown :autoStart 1`] = `
<main>
  <wx-view
    ariaRole="option"
    class="t-count-down t-count-down--default t-count-down--medium class t-class "
    style=""
  >
    00 : 00 : 01
  </wx-view>
</main>
`;

exports[`countdown :base 1`] = `
<main>
  <wx-view
    ariaRole="option"
    class="t-count-down t-count-down--default t-count-down--medium class t-class "
    style=""
  >
    00 : 00 : 01
  </wx-view>
</main>
`;

exports[`countdown :base 2`] = `
<main>
  <wx-view
    ariaRole="option"
    class="t-count-down t-count-down--default t-count-down--medium class t-class "
    style=""
  >
    00 : 00 : 00
  </wx-view>
</main>
`;

exports[`countdown :millisecond 1`] = `
<main>
  <wx-view
    ariaRole="option"
    class="t-count-down t-count-down--default t-count-down--medium class t-class "
    style=""
  >
    00 : 00 : 00
  </wx-view>
</main>
`;
